Case study: Operator with measurement noise

--- a/2019xcordef/JACM/symbols.sty
+++ b/2019xcordef/JACM/symbols.sty
@@ -9,6 +9,7 @@
 \newcommand{\opd}[1]{\emph{#1}}
 \newcommand{\fncte}[1]{\emph{#1}}
 \newcommand{\fnctd}[1]{\emph{#1}}
+\newcommand{\Rpy}{R_{py}}
 \newcommand{\Rrv}{R_{rv}}
 \newcommand{\Rvv}{R_{vv}}
 \newcommand{\Rwx}{R_{wx}}
@@ -16,6 +17,8 @@
 \newcommand{\Rwv}{R_{wv}}
 \newcommand{\Rxx}{R_{xx}}
 \newcommand{\Rxv}{R_{xv}}
+\newcommand{\Rxq}{R_{xq}}
+\newcommand{\Rpq}{R_{pq}}
 \newcommand{\Rvx}{R_{vx}}
 \newcommand{\Ryy}{R_{yy}}
 \newcommand{\Rxy}{R_{xy}}
@@ -33,10 +36,16 @@
 \newcommand{\Swsy}{\tilde{S}_{sy}}
 \newcommand{\Swyy}{\tilde{S}_{yy}}
 \newcommand{\Swxy}{\tilde{S}_{xy}}
+\newcommand{\Swpy}{\tilde{S}_{py}}
+\newcommand{\Swpq}{\tilde{S}_{pq}}
+\newcommand{\Swxq}{\tilde{S}_{xq}}
 \newcommand{\Swyx}{\tilde{S}_{yx}}
 \newcommand{\Szvv}{\check{S}_{vv}}
 \newcommand{\Szwy}{\check{S}_{wy}}
 \newcommand{\Szxx}{\check{S}_{xx}}
+\newcommand{\Szxq}{\check{S}_{xq}}
+\newcommand{\Szpq}{\check{S}_{pq}}
+\newcommand{\Szpy}{\check{S}_{py}}
 \newcommand{\Szyy}{\check{S}_{yy}}
 \newcommand{\Szsy}{\check{S}_{sy}}
 \newcommand{\Szxy}{\check{S}_{xy}}
@@ -49,9 +58,12 @@
 \newcommand{\eqd}{=}
 \newcommand{\conj}{\ast}
 \newcommand{\mathfnct}[1]{#1}
+\newcommand{\rvp}[0]{\mathfnct{p}}
 \newcommand{\rvr}[0]{\mathfnct{t}}
+\newcommand{\rvq}[0]{\mathfnct{q}}
 \newcommand{\rvs}[0]{\mathfnct{s}}
 \newcommand{\rvt}[0]{\mathfnct{t}}
+\newcommand{\rvu}[0]{\mathfnct{u}}
 \newcommand{\rvv}[0]{\mathfnct{v}}
 \newcommand{\rvw}[0]{\mathfnct{t}}
 \newcommand{\rvx}[0]{\mathfnct{x}}
@@ -103,6 +115,19 @@
 \newcommand{\convd}{\conv}  % discrete convolution
 \newcommand{\invo}{\ast}   % involution
 \newcommand{\kdelta}[0]{\bar{\delta}}
+
+\newcommand{\field}[3]{\ofive{#1}{#2}{#3}{0}{1}}
+\newcommand{\origin}{\oquad{0}{0}{\cdots}{0}}
+\newcommand{\fieldF}{\field{\F}{+}{\cdot}}
+\newcommand{\fieldR}{\field{\R}{+}{\cdot}}
+\newcommand{\fieldC}{\field{\C}{+}{\cdot}}
+\newcommand{\fieldX}{\field{\setX}{+}{\cdot}}
+\newcommand{\fieldRa}{\field{\R}{\addf}{\dottimes}}
+
+ \newcommand{\ofive}[5]{\left( #1,#2,#3,#4,#5\right)} % ordered 5-tuple
+ \newcommand{\osix}[6]{\left( #1,#2,#3,#4,#5,#6\right)} % ordered 6-tuple
+ \newcommand{\oeight}[8]{\left( #1,#2,#3,#4,#5,#6,#7,#8\right)} % ordered 8-tuple
+ \newcommand{\onine}[9]{\left( #1,#2,#3,#4,#5,#6,#7,#8,#9\right)} % ordered 9-tuple
 
 %---------------------------------------
 % Operators
