--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -32,7 +32,7 @@
     \input{case_addnoise.tex}
     \input{case_dual_noise.tex}
     \input{case_parallel_ops.tex}
-%    \input{case_operator_mnoise.tex}
+    \input{case_operator_mnoise.tex}
 %    \input{case_dual_mnoise.tex}
 %    \input{case_systemid_nonlinear.tex}
 %   %\input{case_estHx.tex}
