2019xcordef JACM Case study: Non-linear system identification

--- a/2019xcordef/JACM/formatting.sty
+++ b/2019xcordef/JACM/formatting.sty
@@ -9,6 +9,7 @@
 \newcommand{\scy}{\scriptstyle}%
 \newcommand{\indentx}{\ensuremath{\mbox{}\qquad}}%
 \newcommand{\citerpgc}[4]{\cite[page #2]{#1}}
+\newcommand{\citerppgc}[4]{\cite[pages~#2--#3]{#1}}
 \newcommand{\citerpg}[3]{\cite[page #2]{#1}}
 \newcommand{\citerp}[2]{\cite[page #2]{#1}}
 \newcommand{\citerc}[2]{\cite{#1}}
@@ -27,6 +28,7 @@
 \newcommand{\citePpc}  [2]{\cite[page~#2]{#1}}
 \newcommand{\pref}     [1]{\cite{#1}}
 \newcommand{\prefp}    [1]{\cite{#1}}
+\newcommand{\prefpp}   [1]{\cite{#1}}
 \newcommand{\ds}{\displaystyle}
 \newcommand{\brp}[1]{{\left(#1\right)}}       % bracket with parenthesis
 \newcommand{\brs}[1]{{\left[#1\right]}}       % bracket with square brackets
