--- a/2019xcordef/JACM/symbols.sty
+++ b/2019xcordef/JACM/symbols.sty
@@ -4,93 +4,11 @@
 % Mathematical Symbols
 %============================================================================
 
-\newcommand{\abs}[1]{\left\vert#1\right\vert}
-\newcommand{\ope}[1]{\emph{#1}}
-\newcommand{\opd}[1]{\emph{#1}}
-\newcommand{\fncte}[1]{\emph{#1}}
-\newcommand{\fnctd}[1]{\emph{#1}}
-\newcommand{\Rpy}{R_{py}}
-\newcommand{\Rrv}{R_{rv}}
-\newcommand{\Rvv}{R_{vv}}
-\newcommand{\Rwx}{R_{wx}}
-\newcommand{\Rwy}{R_{wy}}
-\newcommand{\Rwv}{R_{wv}}
-\newcommand{\Rxx}{R_{xx}}
-\newcommand{\Rxv}{R_{xv}}
-\newcommand{\Rxq}{R_{xq}}
-\newcommand{\Rpq}{R_{pq}}
-\newcommand{\Rvx}{R_{vx}}
-\newcommand{\Ryy}{R_{yy}}
-\newcommand{\Rxy}{R_{xy}}
-\newcommand{\Ryx}{R_{yx}}
-\newcommand{\Rxt}{R_{xt}}
-\newcommand{\Rtx}{R_{tx}}
-\newcommand{\Ryt}{R_{yt}}
-\newcommand{\Rrx}{R_{rx}}
-\newcommand{\Rsy}{R_{sy}}
-\newcommand{\Rty}{R_{ty}}
-\newcommand{\Swvv}{\tilde{S}_{vv}}
-\newcommand{\Swrx}{\tilde{S}_{rx}}
-\newcommand{\Swwy}{\tilde{S}_{wy}}
-\newcommand{\Swxx}{\tilde{S}_{xx}}
-\newcommand{\Swsy}{\tilde{S}_{sy}}
-\newcommand{\Swyy}{\tilde{S}_{yy}}
-\newcommand{\Swxy}{\tilde{S}_{xy}}
-\newcommand{\Swpy}{\tilde{S}_{py}}
-\newcommand{\Swpq}{\tilde{S}_{pq}}
-\newcommand{\Swxq}{\tilde{S}_{xq}}
-\newcommand{\Swyx}{\tilde{S}_{yx}}
-\newcommand{\Szvv}{\check{S}_{vv}}
-\newcommand{\Szwy}{\check{S}_{wy}}
-\newcommand{\Szxx}{\check{S}_{xx}}
-\newcommand{\Szxq}{\check{S}_{xq}}
-\newcommand{\Szpq}{\check{S}_{pq}}
-\newcommand{\Szrq}{\check{S}_{rq}}
-\newcommand{\Szpy}{\check{S}_{py}}
-\newcommand{\Szyy}{\check{S}_{yy}}
-\newcommand{\Szsy}{\check{S}_{sy}}
-\newcommand{\Szxy}{\check{S}_{xy}}
-\newcommand{\Szrx}{\check{S}_{rx}}
-\newcommand{\Szyx}{\check{S}_{yx}}
-\newcommand{\Szxt}{\check{S}_{xt}}
-\newcommand{\Sztx}{\check{S}_{tx}}
-\newcommand{\Szyt}{\check{S}_{yt}}
-\newcommand{\Szty}{\check{S}_{ty}}
-\newcommand{\eqd}{=}
-\newcommand{\conj}{\ast}
-\newcommand{\mathfnct}[1]{#1}
-\newcommand{\rvp}[0]{\mathfnct{p}}
-\newcommand{\rvr}[0]{\mathfnct{t}}
-\newcommand{\rvq}[0]{\mathfnct{q}}
-\newcommand{\rvs}[0]{\mathfnct{s}}
-\newcommand{\rvt}[0]{\mathfnct{t}}
-\newcommand{\rvu}[0]{\mathfnct{u}}
-\newcommand{\rvv}[0]{\mathfnct{v}}
-\newcommand{\rvw}[0]{\mathfnct{t}}
-\newcommand{\rvx}[0]{\mathfnct{x}}
-\newcommand{\rvy}[0]{\mathfnct{y}}
+\newcommand{\SetOfNumbers}[1]{\mathbb{#1}}
+\newcommand{\R}{\SetOfNumbers{R}}
+\newcommand{\C}{\SetOfNumbers{C}}
+\newcommand{\Z}{\SetOfNumbers{Z}}
 
-\newcommand{\setn}[1]{{\left\{{#1}\right\}}}
-\newcommand{\dd}  [1]   {{\;\mathfnct{d#1}}}
-\newcommand{\dtau}[0]   {\dd{\tau}}
-\newcommand{\du}[0]   {\dd{u}}
-\newcommand{\dx}[0]   {\dd{x}}
-\newcommand{\dy}[0]   {\dd{y}}
-\newcommand{\R}{\mathbb{R}}
-\newcommand{\C}{\mathbb{C}}
-\newcommand{\Z}{\mathbb{Z}}
-\newcommand{\ff}     [0] {{\mathfnct{f}}}
-\newcommand{\fg}     [0] {{\mathfnct{g}}}
-\newcommand{\fh}     [0] {{\mathfnct{h}}}
-\newcommand{\inprod} [2]{\left\langle{#1}\,|\,{#2}\right\rangle}
-\newcommand{\structe}[1]{\emph{#1}}
-\newcommand{\prope}  [1]{\emph{#1}}
-\newcommand{\thme}   [1]{\emph{#1}}
-\newcommand{\propb}  [1]{\textbf{#1}}
-\newcommand{\propd}  [1]{\textbf{#1}}
-\newcommand{\spllR}  [0]{\splp{2}{\R}}         % l_2(R)
-\newcommand{\spllC}  [0]{\splp{2}{\C}}         % l_2(R)
-\newcommand{\splp}[2]{l_{#2}^{#1}}         %\newcommand{\splp}[2]{\mbfscrl_{#2}^{\mathsfup{#1}}}         %
 \newcommand{\seqn}[1]{\left(#1\right)} %!!!\newcommand{\seqn}[1]{\left\lParen#1\right\rParen}
 \newcommand{\seq} [2]{\seqn{#1}_{#2}}
 \newcommand{\seqxZ}[1]{\seq{#1}{n\in\Z}}
@@ -106,6 +24,126 @@
 \newcommand{\seqX}{\mathbb{x}}
 \newcommand{\seqY}{\mathbb{y}}
 \newcommand{\seqZ}{\mathbb{z}}
+
+\newcommand{\ofive} [5]{\left( #1,#2,#3,#4,#5 \right)}             % ordered 5-tuple
+\newcommand{\osix}  [6]{\left( #1,#2,#3,#4,#5,#6 \right)}          % ordered 6-tuple
+\newcommand{\oeight}[8]{\left( #1,#2,#3,#4,#5,#6,#7,#8 \right)}    % ordered 8-tuple
+\newcommand{\onine} [9]{\left( #1,#2,#3,#4,#5,#6,#7,#8,#9 \right)} % ordered 9-tuple
+
+\newcommand{\RandomVariable}[1]{#1}
+\newcommand{\rve}{\RandomVariable{p}}
+\newcommand{\rvp}{\RandomVariable{p}}
+\newcommand{\rvr}{\RandomVariable{t}}
+\newcommand{\rvq}{\RandomVariable{q}}
+\newcommand{\rvs}{\RandomVariable{s}}
+\newcommand{\rvt}{\RandomVariable{t}}
+\newcommand{\rvu}{\RandomVariable{u}}
+\newcommand{\rvv}{\RandomVariable{v}}
+\newcommand{\rvw}{\RandomVariable{t}}
+\newcommand{\rvx}{\RandomVariable{x}}
+\newcommand{\rvy}{\RandomVariable{y}}
+
+\newcommand{\Correlation}[1]{R_{{\mathsf#1}}}
+\newcommand{\Rpy}{\Correlation{py}}
+\newcommand{\Rrr}{\Correlation{rr}}
+\newcommand{\Rqq}{\Correlation{qq}}
+\newcommand{\Rrq}{\Correlation{rq}}
+\newcommand{\Rqr}{\Correlation{qr}}
+\newcommand{\Rrv}{\Correlation{rv}}
+\newcommand{\Rvv}{\Correlation{vv}}
+\newcommand{\Rwx}{\Correlation{wx}}
+\newcommand{\Rwy}{\Correlation{wy}}
+\newcommand{\Rwv}{\Correlation{wv}}
+\newcommand{\Rxx}{\Correlation{xx}}
+\newcommand{\Rxv}{\Correlation{xv}}
+\newcommand{\Rxq}{\Correlation{xq}}
+\newcommand{\Rpq}{\Correlation{pq}}
+\newcommand{\Rvx}{\Correlation{vx}}
+\newcommand{\Ryy}{\Correlation{yy}}
+\newcommand{\Rxy}{\Correlation{xy}}
+\newcommand{\Ryx}{\Correlation{yx}}
+\newcommand{\Rxt}{\Correlation{xt}}
+\newcommand{\Rtx}{\Correlation{tx}}
+\newcommand{\Ryt}{\Correlation{yt}}
+\newcommand{\Rrx}{\Correlation{rx}}
+\newcommand{\Rsy}{\Correlation{sy}}
+\newcommand{\Rty}{\Correlation{ty}}
+
+\newcommand{\wSpectralDensity}[1]{\tilde{S}_{{\mathsf#1}}}
+\newcommand{\Swee}{\wSpectralDensity{vv}}
+\newcommand{\Swuu}{\wSpectralDensity{uu}}
+\newcommand{\Swvv}{\wSpectralDensity{vv}}
+\newcommand{\Swrr}{\wSpectralDensity{rr}}
+\newcommand{\Swpp}{\wSpectralDensity{pp}}
+\newcommand{\Swrx}{\wSpectralDensity{rx}}
+\newcommand{\Swrq}{\wSpectralDensity{rq}}
+\newcommand{\Swqr}{\wSpectralDensity{qr}}
+\newcommand{\Swwy}{\wSpectralDensity{wy}}
+\newcommand{\Swxx}{\wSpectralDensity{xx}}
+\newcommand{\Swsy}{\wSpectralDensity{sy}}
+\newcommand{\Swyy}{\wSpectralDensity{yy}}
+\newcommand{\Swxy}{\wSpectralDensity{xy}}
+\newcommand{\Swpy}{\wSpectralDensity{py}}
+\newcommand{\Swpq}{\wSpectralDensity{pq}}
+\newcommand{\Swxq}{\wSpectralDensity{xq}}
+\newcommand{\Swqq}{\wSpectralDensity{qq}}
+\newcommand{\Swyx}{\wSpectralDensity{yx}}
+
+\newcommand{\zSpectralDensity}[1]{\check{S}_{{\mathsf#1}}}
+\newcommand{\Szvv}{\zSpectralDensity{vv}}
+\newcommand{\Szpp}{\zSpectralDensity{pp}}
+\newcommand{\Szwy}{\zSpectralDensity{wy}}
+\newcommand{\Szxx}{\zSpectralDensity{xx}}
+\newcommand{\Szxq}{\zSpectralDensity{xq}}
+\newcommand{\Szpq}{\zSpectralDensity{pq}}
+\newcommand{\Szrq}{\zSpectralDensity{rq}}
+\newcommand{\Szpy}{\zSpectralDensity{py}}
+\newcommand{\Szyy}{\zSpectralDensity{yy}}
+\newcommand{\Szsy}{\zSpectralDensity{sy}}
+\newcommand{\Szxy}{\zSpectralDensity{xy}}
+\newcommand{\Szrx}{\zSpectralDensity{rx}}
+\newcommand{\Szyx}{\zSpectralDensity{yx}}
+\newcommand{\Szxt}{\zSpectralDensity{xt}}
+\newcommand{\Sztx}{\zSpectralDensity{tx}}
+\newcommand{\Szyt}{\zSpectralDensity{yt}}
+\newcommand{\Szty}{\zSpectralDensity{ty}}
+\newcommand{\Szqq}{\zSpectralDensity{qq}}
+
+\newcommand{\abs}[1]{\left\vert#1\right\vert}
+\newcommand{\ope}[1]{\emph{#1}}
+\newcommand{\opd}[1]{\emph{#1}}
+\newcommand{\fncte}[1]{\emph{#1}}
+\newcommand{\fnctd}[1]{\emph{#1}}
+\newcommand{\fCost}[0]{\mathfnct{C}}
+\newcommand{\fCostrq}[0]{\fCost_{\mathsf{rq}}}
+\newcommand{\fCostsy}[0]{\fCost_{\mathsf{sy}}}
+\newcommand{\eqd}{=}
+\newcommand{\conj}{\ast}
+\newcommand{\mathfnct}[1]{#1}
+
+\newcommand{\Estimate}[1]{\hat{#1}}
+\newcommand{\estRee} {\Estimate{R}_{\mathsf{ee}}}
+\newcommand{\estH}   {\Estimate{H}}
+\newcommand{\estHa}  {\estH_{\mathsf{1}}}
+
+\newcommand{\setn}[1]{{\left\{{#1}\right\}}}
+\newcommand{\dd}  [1]   {{\;\mathfnct{d#1}}}
+\newcommand{\dtau}[0]   {\dd{\tau}}
+\newcommand{\du}[0]   {\dd{u}}
+\newcommand{\dx}[0]   {\dd{x}}
+\newcommand{\dy}[0]   {\dd{y}}
+\newcommand{\ff}     [0] {{\mathfnct{f}}}
+\newcommand{\fg}     [0] {{\mathfnct{g}}}
+\newcommand{\fh}     [0] {{\mathfnct{h}}}
+\newcommand{\inprod} [2]{\left\langle{#1}\,|\,{#2}\right\rangle}
+\newcommand{\structe}[1]{\emph{#1}}
+\newcommand{\prope}  [1]{\emph{#1}}
+\newcommand{\thme}   [1]{\emph{#1}}
+\newcommand{\propb}  [1]{\textbf{#1}}
+\newcommand{\propd}  [1]{\textbf{#1}}
+\newcommand{\spllR}  [0]{\splp{2}{\R}}         % l_2(R)
+\newcommand{\spllC}  [0]{\splp{2}{\C}}         % l_2(R)
+\newcommand{\splp}[2]{l_{#2}^{#1}}         %\newcommand{\splp}[2]{\mbfscrl_{#2}^{\mathsfup{#1}}}         %
 \newcommand{\imark}{$\bullet$}
 \newcommand{\ZT}  [1]   {{\check{{\mathfnct{#1}}}}}
 \newcommand{\ZH}    [0]{{\ZT{\fH}}}
@@ -117,6 +155,10 @@
 \newcommand{\invo}{\ast}   % involution
 \newcommand{\kdelta}[0]{\bar{\delta}}
 
+\newcommand{\deriv} [2]   {{\frac{\mathrm{d}#1}{\mathrm{d}#2} }}
+\newcommand{\pderiv}[2]   {{\frac{{\partial#1}}{{\partial#2}} }}
+\newcommand{\ppderiv}[2]   {{\frac{\partial^2#1}{\partial#2} }}
+
 \newcommand{\field}[3]{\ofive{#1}{#2}{#3}{0}{1}}
 \newcommand{\origin}{\oquad{0}{0}{\cdots}{0}}
 \newcommand{\fieldF}{\field{\F}{+}{\cdot}}
@@ -125,18 +167,18 @@
 \newcommand{\fieldX}{\field{\setX}{+}{\cdot}}
 \newcommand{\fieldRa}{\field{\R}{\addf}{\dottimes}}
 
- \newcommand{\ofive}[5]{\left( #1,#2,#3,#4,#5\right)} % ordered 5-tuple
- \newcommand{\osix}[6]{\left( #1,#2,#3,#4,#5,#6\right)} % ordered 6-tuple
- \newcommand{\oeight}[8]{\left( #1,#2,#3,#4,#5,#6,#7,#8\right)} % ordered 8-tuple
- \newcommand{\onine}[9]{\left( #1,#2,#3,#4,#5,#6,#7,#8,#9\right)} % ordered 9-tuple
-
 %---------------------------------------
 % Operators
 %---------------------------------------
-\DeclareMathOperator{\opDTFT}{\breve{F}}
-\DeclareMathOperator{\pE}{E}
-\DeclareMathOperator{\opE}{E}
-\DeclareMathOperator{\opH}{H}
-\DeclareMathOperator{\opS}{S}
-\DeclareMathOperator{\opT}{T}
-\DeclareMathOperator{\opZ}{Z}
+\DeclareMathOperator{\opDTFT}{\breve{F}}    % Discrete-Time Fourier Transform
+\DeclareMathOperator{\pE}{E}                % Expectation Operator
+\DeclareMathOperator{\opE}{E}               % 
+\DeclareMathOperator{\opH}{H}               %
+\DeclareMathOperator{\opS}{S}               %
+\DeclareMathOperator{\opT}{T}               %
+\DeclareMathOperator{\opZ}{Z}               % Z-Transform Operator
+\DeclareMathOperator{\opFT}{\tilde{F}}      % Fourier Transform
+\DeclareMathOperator{\Real}{R_{\mathsf{e}}} % 
+\DeclareMathOperator{\Imag}{I_{\mathsf{m}}} % 
+\DeclareMathOperator*{\argmin}{arg\,min}    % reference: http://tex.stackexchange.com/questions/5223/command-for-argmin-or-argmax
+\DeclareMathOperator*{\argmax}{arg\,max}    %
