2019xcordef JACM Which one? section

--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -35,8 +35,7 @@
     \input{case_operator_mnoise.tex}
     \input{case_dual_mnoise.tex}
     \input{case_systemid_nonlinear.tex}
-%   %\input{case_estHx.tex}
-%  \input{evaluation.tex}
+  \input{evaluation.tex}
 %---------------------------------------
 % Appendices
 %---------------------------------------
