--- a/2019xcordef/JACM/symbols.sty
+++ b/2019xcordef/JACM/symbols.sty
@@ -42,6 +42,8 @@
 \newcommand{\rvw}{\RandomVariable{t}}
 \newcommand{\rvx}{\RandomVariable{x}}
 \newcommand{\rvy}{\RandomVariable{y}}
+\newcommand{\rvX}{\RandomVariable{X}}
+\newcommand{\rvY}{\RandomVariable{Y}}
 
 \newcommand{\Correlation}[1]{R_{{\mathsf#1}}}
 \newcommand{\Rpy}{\Correlation{py}}
@@ -112,29 +114,36 @@
 \newcommand{\abs}[1]{\left\vert#1\right\vert}
 \newcommand{\ope}[1]{\emph{#1}}
 \newcommand{\opd}[1]{\emph{#1}}
+
 \newcommand{\fncte}[1]{\emph{#1}}
 \newcommand{\fnctd}[1]{\emph{#1}}
-\newcommand{\fCost}[0]{\mathfnct{C}}
-\newcommand{\fCostrq}[0]{\fCost_{\mathsf{rq}}}
-\newcommand{\fCostsy}[0]{\fCost_{\mathsf{sy}}}
+\newcommand{\mathfnct}[1]{#1}
+\newcommand{\fx  }[0]{{\mathfnct{x}}}
+\newcommand{\fy  }[0]{{\mathfnct{y}}}
+\newcommand{\ff}     {{\mathfnct{f}}}
+\newcommand{\fg}     {{\mathfnct{g}}}
+\newcommand{\fh}     {{\mathfnct{h}}}
+\newcommand{\fCost}  {\mathfnct{C}}
+\newcommand{\fCostrq}{\fCost_{\mathsf{rq}}}
+\newcommand{\fCostsy}{\fCost_{\mathsf{sy}}}
 \newcommand{\eqd}{=}
 \newcommand{\conj}{\ast}
-\newcommand{\mathfnct}[1]{#1}
 
 \newcommand{\Estimate}[1]{\hat{#1}}
 \newcommand{\estRee} {\Estimate{R}_{\mathsf{ee}}}
 \newcommand{\estH}   {\Estimate{H}}
 \newcommand{\estHa}  {\estH_{\mathsf{1}}}
 
+\newcommand{\set}[2]{\left\{#1|#2\right\}}
 \newcommand{\setn}[1]{{\left\{{#1}\right\}}}
-\newcommand{\dd}  [1]   {{\;\mathfnct{d#1}}}
-\newcommand{\dtau}[0]   {\dd{\tau}}
-\newcommand{\du}[0]   {\dd{u}}
-\newcommand{\dx}[0]   {\dd{x}}
-\newcommand{\dy}[0]   {\dd{y}}
-\newcommand{\ff}     [0] {{\mathfnct{f}}}
-\newcommand{\fg}     [0] {{\mathfnct{g}}}
-\newcommand{\fh}     [0] {{\mathfnct{h}}}
+
+\newcommand{\Infinitesimal}[1]{{\;\mathfnct{d#1}}}
+\newcommand{\dtau}{\Infinitesimal{\tau}}
+\newcommand{\dt}  {\Infinitesimal{t}}
+\newcommand{\du}  {\Infinitesimal{u}}
+\newcommand{\dx}  {\Infinitesimal{x}}
+\newcommand{\dy}  {\Infinitesimal{y}}
+
 \newcommand{\inprod} [2]{\left\langle{#1}\,|\,{#2}\right\rangle}
 \newcommand{\structe}[1]{\emph{#1}}
 \newcommand{\prope}  [1]{\emph{#1}}
@@ -172,13 +181,13 @@
 %---------------------------------------
 \DeclareMathOperator{\opDTFT}{\breve{F}}    % Discrete-Time Fourier Transform
 \DeclareMathOperator{\pE}{E}                % Expectation Operator
-\DeclareMathOperator{\opE}{E}               % 
+\DeclareMathOperator{\opE}{E}               %
 \DeclareMathOperator{\opH}{H}               %
 \DeclareMathOperator{\opS}{S}               %
 \DeclareMathOperator{\opT}{T}               %
 \DeclareMathOperator{\opZ}{Z}               % Z-Transform Operator
 \DeclareMathOperator{\opFT}{\tilde{F}}      % Fourier Transform
-\DeclareMathOperator{\Real}{R_{\mathsf{e}}} % 
-\DeclareMathOperator{\Imag}{I_{\mathsf{m}}} % 
+\DeclareMathOperator{\Real}{R_{\mathsf{e}}} %
+\DeclareMathOperator{\Imag}{I_{\mathsf{m}}} %
 \DeclareMathOperator*{\argmin}{arg\,min}    % reference: http://tex.stackexchange.com/questions/5223/command-for-argmin-or-argmax
 \DeclareMathOperator*{\argmax}{arg\,max}    %
