--- a/2019xcordef/JACM/xcordef.tex
+++ b/2019xcordef/JACM/xcordef.tex
@@ -340,7 +340,8 @@ Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def
      &&=    \brlr{ \ZH(z) \Szxt\brp{z}}_{\rvt\eqd\rvy}
      =    \boxed{\ZH(z) \Szxy\brp{z}}
      &&=    \boxed{\ZH(z) \ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx(z)}
-\\
+\end{align*}
+\begin{align*}
     (2).\quad\Szty(z)
       &\eqd \opZ\Rty(m)
      &&\eqd \opZ\pE\brs{\rvt^\ast(0)\rvy(m)}
@@ -366,7 +367,8 @@ Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def
     \\&=    \ZH(z) \ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx^\ast\brp{\frac{1}{z^\ast}}
      &&=    \boxed{\ZH(z) \ZH^\ast\brp{\frac{1}{z^\ast}} \Szxx(z)}
      &&     \text{by \pref{prop:Szxy}}
-\\
+\end{align*}
+\begin{align*}
     (3).\quad\Szty(z)
       &\eqd \opZ\Rty(m)
        \eqd \opZ\pE\brs{\rvt(0)\rvy^\ast(m)}
@@ -390,7 +392,8 @@ Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def
      &&= \boxed{\ZH^\ast\brp{z^\ast} \Szxy^\ast\brp{\frac{1}{z^\ast}}}
     \\&= \ZH^\ast\brp{z^\ast} \ZH\brp{\frac{1}{z}} \Szxx^\ast\brp{\frac{1}{z^\ast}}
      &&= \boxed{\ZH^\ast\brp{z^\ast} \ZH\brp{\frac{1}{z}} \Szxx(z)}
-\\
+\end{align*}
+\begin{align*}
     (4).\quad\Szyt(z)
       &\eqd \opZ\Ryt(m)
      &&\eqd\mathrlap{\opZ\pE\brs{\rvy^\ast(m)\rvt(0)}
@@ -416,7 +419,8 @@ Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def
        = \brlr{\ZH^\ast\brp{z^\ast}\Szxt(z)}_{\rvt=\rvy}
      &&= \boxed{\ZH^\ast\brp{z^\ast}\Szxy(z)}
      &&= \boxed{\ZH^\ast\brp{z^\ast}\ZH\brp{\frac{1}{z}} \Szxx(z)}
-    \\
+\end{align*}
+\begin{align*}
     (5).\quad\Szty(z)
       &\eqd \opZ\Rty(m)
      &&\eqd \opZ\pE\brs{\rvt(0)\rvy(m)}
@@ -440,7 +444,8 @@ Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def
     \\&= \boxed{\ZH\brp{\frac{1}{z}} \Szxy(z)}
      &&= \ZH\brp{\frac{1}{z}} \ZH(z) \Szxx(z)
      &&= \boxed{ \ZH(z) \ZH\brp{\frac{1}{z}} \Szxx(z)}
-\\
+\end{align*}
+\begin{align*}
    (6).\quad\Szyt(z)
       &\eqd \opZ\Ryt(m)
      &&\eqd \opZ\pE\brs{\rvy(m)\rvt(0)}
@@ -464,7 +469,8 @@ Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def
        = \brlr{\ZH(z) \Szxt(z)}_{\rvt=\rvy}
      &&= \boxed{\ZH(z) \Szxy(z)}
      &&= \boxed{\ZH(z) \ZH\brp{\frac{1}{z}} \Szxx(z)}
-\\
+\end{align*}
+\begin{align*}
     (7).\quad\Szty(z)
       &\eqd \opZ\Rty(m)
        \eqd \opZ\pE\brs{\rvt^\ast(0)\rvy^\ast(m)}
@@ -488,7 +494,8 @@ Let (1)--(8) below correspond to the eight definitions of $\Rxy(m)$ in \pref{def
     \\&= \boxed{\ZH^\ast\brp{\frac{1}{z^\ast}} \Szxy(z)}
      &&= \ZH^\ast\brp{\frac{1}{z^\ast}} \ZH^\ast\brp{z^\ast} \Szxx(z)
      &&= \boxed{ \ZH^\ast\brp{z^\ast} \ZH^\ast\brp{\frac{1}{z^\ast}}\Szxx(z)}
-\\
+\end{align*}
+\begin{align*}
     (8).\quad\Szyt(z)
       &\eqd \opZ\Ryt(m)
      &&\eqd \opZ\pE\brs{\rvy^\ast(m)\rvt^\ast(0)}
