--- a/2019xcordef/JACM/packages.sty
+++ b/2019xcordef/JACM/packages.sty
@@ -7,13 +7,14 @@
 \usepackage{amsmath, amsthm}
 \usepackage{graphicx, amssymb, array, amscd, amsfonts, color}
 \usepackage{Latexsym}
-\usepackage{array}                    % new tabular and array support, \newcolumntype
-\usepackage{longtable}
-\usepackage{calc}                     % calculation
-\usepackage{cancel}                  % allows diagonal cancelation
+\usepackage{array}                       % new tabular and array support, \newcolumntype
+\usepackage{longtable}                   % tables spanning multiple pages
+\usepackage{calc}                        % calculation
+\usepackage{cancel}                      % allows diagonal cancelation
 \renewcommand{\CancelColor}{\color{red}} % color of cancellation marks
-\usepackage{slashed}                 % useful for overlapping math symbols: \declareslashed
-\usepackage{amsthm}
+\usepackage{slashed}                     % useful for overlapping math symbols: \declareslashed
 \usepackage{mathtools}
-\usepackage{xfrac} 
+\usepackage{xfrac}
 \usepackage{hyperref}
+\usepackage{geometry}
+\usepackage{prettyref}
