2019xcordef JACM Appendix A Random Sequences

--- a/2019xcordef/JACM/case_addnoise.tex
+++ b/2019xcordef/JACM/case_addnoise.tex
@@ -92,99 +92,85 @@ where $\opT$ is an operator that is \prope{not necessarily linear}.
        &\eqd \pE\brs{\rvx^\ast(0)\rvy(m)}
       &&\eqd \pE\brp{\rvx^\ast(0)\brs{\rvx(m)+\rvv(m)}}
       &&=    \pE\brs{\rvx^\ast(0)\rvx(m)} + \pE\brs{\rvx^\ast(0)                       \rvv(m)}
-     %&&=    \pE\brs{\rvx^\ast(0)\rvx(m)} + \pE\brs{\rvx^\ast(0)} \pE\brs{             \rvv(m)}
-     %&&=    \pE\brs{\rvx^\ast(0)\rvx(m)} + \pE\brs{\rvx^\ast(0)} \cancelto{0}{\pE\brs{\rvv(m)}}
       &&=    \Rxx(m)
      \\
     (3).\quad\Rxy(m)
        &\eqd \pE\brs{\rvx(0)\rvy^\ast(m)}
       &&\eqd \pE\brp{\rvx(0)\brs{\rvx(m)+\rvv(m)}^\ast}
       &&=    \pE\brs{\rvx(0)\rvx^\ast(m)} + \pE\brs{\rvx(0)                       \rvv^\ast(m)}
-     %&&=    \pE\brs{\rvx(0)\rvx^\ast(m)} + \pE\brs{\rvx(0)} \pE\brs{             \rvv^\ast(m)}
-     %&&=    \pE\brs{\rvx(0)\rvx^\ast(m)} + \pE\brs{\rvx(0)} \cancelto{0}{\pE\brs{\rvv^\ast(m)}}
       &&=    \Rxx(m)
      \\
     (4).\quad\Rxy(m)
       &\eqd \pE\brs{\rvx^\ast(m)\rvy(0)}
       &&\eqd \pE\brp{\rvx^\ast(m)\brs{\rvx(0)+\rvv(0)}}
       &&=    \pE\brs{\rvx^\ast(m)\rvx(0)} + \pE\brs{\rvx^\ast(m)                       \rvv(0)}
-     %&&=    \pE\brs{\rvx^\ast(m)\rvx(0)} + \pE\brs{\rvx^\ast(m)} \pE\brs{             \rvv(0)}
-     %&&=    \pE\brs{\rvx^\ast(m)\rvx(0)} + \pE\brs{\rvx^\ast(m)} \cancelto{0}{\pE\brs{\rvv(0)}}
       &&=    \Rxx(m)
      \\
     (5).\quad\Rxy(m)
       &\eqd \pE\brs{\rvx(0)\rvy(m)}
       &&\eqd \pE\brp{\rvx(0)\brs{\rvx(m)+\rvv(m)}}
       &&=    \pE\brs{\rvx(0)\rvx(m)} + \pE\brs{\rvx(0)                       \rvv(m)}
-     %&&=    \pE\brs{\rvx(0)\rvx(m)} + \pE\brs{\rvx(0)} \pE\brs{             \rvv(m)}
-     %&&=    \pE\brs{\rvx(0)\rvx(m)} + \pE\brs{\rvx(0)} \cancelto{0}{\pE\brs{\rvv(m)}}
       &&=    \Rxx(m)
      \\
     (6).\quad\Rxy(m)
       &\eqd \pE\brs{\rvx(m)\rvy(0)}
       &&\eqd \pE\brp{\rvx(m)\brs{\rvx(0)+\rvv(0)}}
       &&=    \pE\brs{\rvx(m)\rvx(0)} + \pE\brs{\rvx(m)                       \rvv(0)}
-     %&&=    \pE\brs{\rvx(m)\rvx(0)} + \pE\brs{\rvx(m)} \pE\brs{             \rvv(0)}
-     %&&=    \pE\brs{\rvx(m)\rvx(0)} + \pE\brs{\rvx(m)} \cancelto{m}{\pE\brs{\rvv(0)}}
       &&=    \Rxx(0)
     \\
     (7).\quad\Rxy(m)
       &\eqd \pE\brs{\rvx^\ast(0)\rvy^\ast(m)}
       &&\eqd \pE\brp{\rvx^\ast(0)\brs{\rvx^\ast(m)+\rvv^\ast(m)}}
       &&=    \pE\brs{\rvx^\ast(0)\rvx(m)} + \pE\brs{\rvx^\ast(0)                       \rvv^\ast(m)}
-     %&&=    \pE\brs{\rvx^\ast(0)\rvx(m)} + \pE\brs{\rvx^\ast(0)} \pE\brs{             \rvv^\ast(m)}
-     %&&=    \pE\brs{\rvx^\ast(0)\rvx(m)} + \pE\brs{\rvx^\ast(0)} \cancelto{0}{\pE\brs{\rvv^\ast(m)}}
       &&=    \Rxx(m)
     \\
     (8).\quad\Rxy(m)
       &\eqd \pE\brs{\rvx^\ast(m)\rvy^\ast(0)}
       &&\eqd \pE\brp{\rvx^\ast(m)\brs{\rvx^\ast(0)+\rvv^\ast(0)}}
       &&=    \pE\brs{\rvx^\ast(m)\rvx(0)} + \pE\brs{\rvx^\ast(m)                       \rvv^\ast(0)}
-     %&&=    \pE\brs{\rvx^\ast(m)\rvx(0)} + \pE\brs{\rvx^\ast(m)} \pE\brs{             \rvv^\ast(0)}
-     %&&=    \pE\brs{\rvx^\ast(m)\rvx(0)} + \pE\brs{\rvx^\ast(m)} \cancelto{m}{\pE\brs{\rvv^\ast(0)}}
       &&=    \Rxx(m)
   \end{align*}
   \begin{align*}
     (2).\quad\Ryy(m)
         &\eqd \pE\brs{\rvy^\ast(0)\rvy(m)}
-       &&\eqd \pE\brp{\brs{\rvx(0)+\rvv(0)}^\ast\brs{\rvx(m)+\rvv(m)}}
-       &&= \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
+       &&\eqd \scy \pE\brp{\brs{\rvx(0)+\rvv(0)}^\ast\brs{\rvx(m)+\rvv(m)}}
+       &&=    \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
        &&=    \Rxx(m)                                                 + \Rvv(m)
     \\
     (3).\quad\Ryy(m)
         &\eqd \pE\brs{\rvy(0)\rvy^\ast(m)}
-       &&\eqd \pE\brp{\brs{\rvx(0)+\rvv(0)}\brs{\rvx(m)+\rvv(m)}^\ast}
-       &&= \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
+       &&\eqd \scy \pE\brp{\brs{\rvx(0)+\rvv(0)}\brs{\rvx(m)+\rvv(m)}^\ast}
+       &&=    \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
        &&=    \Rxx(m)                                                 + \Rvv(m)
     \\
     (4).\quad\Ryy(m)
         &\eqd \pE\brs{\rvy^\ast(m)\rvy(0)}
-       &&\eqd \pE\brp{\brs{\rvx(m)+\rvv(m)}^\ast\brs{\rvx(0)+\rvv(0)}}
-       &&= \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
+       &&\eqd \scy \pE\brp{\brs{\rvx(m)+\rvv(m)}^\ast\brs{\rvx(0)+\rvv(0)}}
+       &&=    \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
        &&=    \Rxx(m)                                                 + \Rvv(m)
     \\
     (5).\quad\Ryy(m)
         &\eqd \pE\brs{\rvy(0)\rvy(m)}
-       &&\eqd \pE\brp{\brs{\rvx(0)+\rvv(0)}\brs{\rvx(m)+\rvv(m)}}
-       &&= \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
+       &&\eqd \scy \pE\brp{\brs{\rvx(0)+\rvv(0)}\brs{\rvx(m)+\rvv(m)}}
+       &&=    \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
        &&=    \Rxx(m)                                                 + \Rvv(m)
     \\
     (6).\quad\Ryy(m)
         &\eqd \pE\brs{\rvy(m)\rvy(0)}
-       &&\eqd \pE\brp{\brs{\rvx(m)+\rvv(m)}\brs{\rvx(0)+\rvv(0)}}
-       &&= \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
+       &&\eqd \scy \pE\brp{\brs{\rvx(m)+\rvv(m)}\brs{\rvx(0)+\rvv(0)}}
+       &&=    \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
        &&=    \Rxx(m)                                                 + \Rvv(m)
     \\
     (7).\quad\Ryy(m)
        &\eqd \pE\brs{\rvy^\ast(0)\rvy^\ast(m)}
-       &&\eqd \pE\brp{\brs{\rvx(0)+\rvv(0)}^\ast\brs{\rvx(m)+\rvv(m)}^\ast}
-       &&= \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
+       &&\eqd \scy \pE\brp{\brs{\rvx(0)+\rvv(0)}^\ast\brs{\rvx(m)+\rvv(m)}^\ast}
+       &&=    \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
        &&=    \Rxx(m)                                                 + \Rvv(m)
     \\
     (8).\quad\Ryy(m)
        &\eqd \pE\brs{\rvy^\ast(m)\rvy^\ast(0)}
-       &&\eqd \pE\brp{\brs{\rvx(m)+\rvv(m)}^\ast\brs{\rvx(0)+\rvv(0)}^\ast}
-       &&= \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
+       &&\eqd \scy \pE\brp{\brs{\rvx(m)+\rvv(m)}^\ast\brs{\rvx(0)+\rvv(0)}^\ast}
+       &&=    \scy \Rxx(m) + \cancelto{0}{\Rxv(m)} + \cancelto{0}{\Rvx(m)} + \Rvv(m)
        &&=    \Rxx(m)                                                 + \Rvv(m)
 \end{align*}
 \end{proof}
