--- a/2019xcordef/JACM/formatting.sty
+++ b/2019xcordef/JACM/formatting.sty
@@ -71,6 +71,7 @@
 \newcommand{\remboxt} [1]{\rembox{\begin{array}{M}#1\end{array}}}
 
 
+\newcolumntype{C}{>{\scriptstyle}l}
 \newcolumntype{D}{>{$\scriptsize}l<{$}}
 \newcolumntype{F}{>{$\scriptsize}r<{$}}
 \newcolumntype{M}{>{$}l<{$}}
