--- a/2019xcordef/JACM/main.tex
+++ b/2019xcordef/JACM/main.tex
@@ -39,14 +39,13 @@
 %---------------------------------------
 % Appendices
 %---------------------------------------
-%\begin{appendices}
-%%\section{Standard definitions}
-%\section{Random Sequences}
-%  \input{expectation.tex}
+\begin{appendices}
+\section{Random Sequences}
+  \input{expectation.tex}
 %  \input{randseq.tex}
 %  \input{dsp.tex}
 %  \input{normalg.tex}
-%\end{appendices}
+\end{appendices}
 %---------------------------------------
 % Backmatter
 %---------------------------------------
