--- a/2019xcordef/JACM/symbols.sty
+++ b/2019xcordef/JACM/symbols.sty
@@ -9,6 +9,8 @@
 \newcommand{\C}{\SetOfNumbers{C}}
 \newcommand{\Z}{\SetOfNumbers{Z}}
 
+\newcommand{\F}{\mathbb{F}}                % arbitrary field
+
 \newcommand{\seqn}[1]{\left(#1\right)} %!!!\newcommand{\seqn}[1]{\left\lParen#1\right\rParen}
 \newcommand{\seq} [2]{\seqn{#1}_{#2}}
 \newcommand{\seqxZ}[1]{\seq{#1}{n\in\Z}}
@@ -25,10 +27,11 @@
 \newcommand{\seqY}{\mathbb{y}}
 \newcommand{\seqZ}{\mathbb{z}}
 
-\newcommand{\ofive} [5]{\left( #1,#2,#3,#4,#5 \right)}             % ordered 5-tuple
-\newcommand{\osix}  [6]{\left( #1,#2,#3,#4,#5,#6 \right)}          % ordered 6-tuple
-\newcommand{\oeight}[8]{\left( #1,#2,#3,#4,#5,#6,#7,#8 \right)}    % ordered 8-tuple
-\newcommand{\onine} [9]{\left( #1,#2,#3,#4,#5,#6,#7,#8,#9 \right)} % ordered 9-tuple
+\newcommand{\otriple}[3]{\left( #1,#2,#3\right)}                   % ordered triple
+\newcommand{\ofive}  [5]{\left( #1,#2,#3,#4,#5 \right)}             % ordered 5-tuple
+\newcommand{\osix}   [6]{\left( #1,#2,#3,#4,#5,#6 \right)}          % ordered 6-tuple
+\newcommand{\oeight} [8]{\left( #1,#2,#3,#4,#5,#6,#7,#8 \right)}    % ordered 8-tuple
+\newcommand{\onine}  [9]{\left( #1,#2,#3,#4,#5,#6,#7,#8,#9 \right)} % ordered 9-tuple
 
 \newcommand{\RandomVariable}[1]{#1}
 \newcommand{\rve}{\RandomVariable{p}}
@@ -175,6 +178,40 @@
 \newcommand{\fieldC}{\field{\C}{+}{\cdot}}
 \newcommand{\fieldX}{\field{\setX}{+}{\cdot}}
 \newcommand{\fieldRa}{\field{\R}{\addf}{\dottimes}}
+
+\newcommand{\psO}{\Omega}                     % probability space outcomes
+\newcommand{\psE}{\mathbb{E}}                 % probability space events
+\newcommand{\psP}{\mathsf{P}}                 % probability space probability measure
+\newcommand{\ps} {\otriple{\psO}{\psE}{\psP}} % probability space
+
+ \newcommand{\pp}{\mathfnct{p}}% pdf (probability density function)
+ \newcommand{\pc}{\mathfnct{c}}% cdf (cummulative distribution function)
+ \newcommand{\ppx}   [1][X]{\pp_{\mbox{\tiny$\mathfnct{#1}$}}}% pdf of X
+ \newcommand{\pcx}   [1][X]{\pc_{\mbox{\tiny$\mathfnct{#1}$}}}% cdf of X
+ \newcommand{\ppy}   [0]{\ppx[Y]}
+ \newcommand{\ppz}   [0]{\ppx[Z]}
+ \newcommand{\pcy}   [0]{\pcx[Y]}
+ \newcommand{\pcz}   [0]{\pcx[Z]}
+ \newcommand{\ppr}   [0]{\ppx[R]}
+ \newcommand{\ppth}  [0]{\ppx[\theta]}
+ \newcommand{\ppxy}  [0]{\ppx[XY]}
+ \newcommand{\ppyx}  [0]{\ppx[YX]}
+ \newcommand{\ppxgy} [0]{\ppx[X|Y]} % pdf of X given Y
+
+\newcommand{\pEx}[1][x]{\pE_{\mathsf{#1}}} % expected value wrt X
+\newcommand{\pEy}[0]   {\pEx[y]} % expected value wrt Y
+\newcommand{\pEz}[0]   {\pEx[z]} % expected value wrt Y
+\newcommand{\pExy}[0]  {\pEx[xy]} % expected value wrt XY
+\newcommand{\pEyx}[0]  {\pEx[yx]} % expected value wrt XY
+
+ \newcommand{\pdfp}  [0]{\mathfnct{p}}
+ \newcommand{\pdfpb} [1]{\mathfnct{p\left[#1\right]}}
+ \newcommand{\pdfx}  [0]{\mathfnct{p}_{\rvx}}
+ \newcommand{\pdfy}  [0]{\mathfnct{p}_{\rvy}}
+ \newcommand{\pdft}  [0]{\mathfnct{p}_{\rvt}}
+ \newcommand{\pdfxy} [0]{\mathfnct{p}_{\rvx\rvy}}
+ \newcommand{\pdfxgy}[0]{\mathfnct{p}_{\rvx|\rvy}}
+ \newcommand{\pdfygx}[0]{\mathfnct{p}_{\rvy|\rvx}}
 
 %---------------------------------------
 % Operators
